Try to fix bottom cut off problem on mobile

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ h2 {
 h3 {
     margin-top: 0;
     font-size:  18px;
+    text-align: left;
 }
 
 li {
@@ -206,12 +207,17 @@ body {
     overflow-y:     scroll;
 }
 
-#sliding-pages > div::after {
-    display:    block;
-    content:    "";
-    width:      100%;
-    height:     1px;
-    margin-top: 20px;
+#sliding-pages > div > section::after {
+    display:         flex;
+    justify-content: center;
+    align-items:     center;
+    content:         "-";
+    color:           transparent;
+    user-select:     none;
+    overflow:        hidden;
+    width:           100%;
+    height:          1px;
+    margin-top:      20px;
 }
 
 #sliding-pages > div::-webkit-scrollbar {
@@ -233,6 +239,7 @@ body {
     border-radius:  9pt;
     padding:        1pt 5pt;
     vertical-align: 1.5pt;
+    white-space: nowrap;
 }
 
 .project-img-caption {
